--- a/stm32f042k6/Cargo.toml
+++ b/stm32f042k6/Cargo.toml
@@ -10,6 +10,7 @@ stm32f0xx-hal = { version = "0.14.1", features = ["rt", "stm32f042"] }
 panic-semihosting = "0.5"
 usb-device = "0.2.1"
 stm32-usbd = { version = "0.2", features = ["stm32f042xx"] }
+cortex-m = "0.6.0"
 
 [patch.crates-io]
 stm32-usbd = { path = "../../stm32-usbd" }
