--- a/stm32f042k6/Cargo.toml
+++ b/stm32f042k6/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "example-stm32f042k6"
+name = "test-stm32f042k6"
 version = "0.1.0"
 authors = ["Vadim Kaushan <admin@disasm.info>"]
 edition = "2018"
 
 [dependencies]
-cortex-m-rt = "0.6"
-stm32f0xx-hal = { version = "0.14.1", features = ["rt", "stm32f042"] }
-panic-semihosting = "0.5"
-usb-device = "0.2.1"
-stm32-usbd = { version = "0.2", features = ["stm32f042xx"] }
-cortex-m = "0.6.0"
+cortex-m-rt = "0.6.10"
+stm32f0xx-hal = { version = "0.16.0", features = ["rt", "stm32-usbd", "stm32f042"] }
+panic-semihosting = "0.5.3"
+usb-device = "0.2.3"
+cortex-m = "0.6.1"
 
 [patch.crates-io]
 stm32-usbd = { path = "../../stm32-usbd" }
