--- a/stm32f103c8/Cargo.toml
+++ b/stm32f103c8/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "example-stm32f103c8"
+name = "test-stm32f103c8"
 version = "0.1.0"
 authors = ["Vadim Kaushan <admin@disasm.info>"]
 edition = "2018"
 
 [dependencies]
-cortex-m = "0.6"
-cortex-m-rt = "0.6"
-stm32f1xx-hal = { version = "0.3", features = ["rt"] }
-panic-semihosting = "0.5"
-usb-device = "0.2.1"
-stm32-usbd = { version = "0.2", features = ["stm32f103xx"] }
+cortex-m = "0.6.1"
+cortex-m-rt = "0.6.10"
+stm32f1xx-hal = { version = "0.5.0", features = ["rt", "stm32-usbd", "stm32f103"] }
+embedded-hal = "0.2.3"
+panic-semihosting = "0.5.3"
+usb-device = "0.2.3"
 
 [patch.crates-io]
 stm32-usbd = { path = "../../stm32-usbd" }
