--- a/stm32f303vc/Cargo.toml
+++ b/stm32f303vc/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "example-stm32f303vc"
+name = "test-stm32f303vc"
 version = "0.1.0"
 authors = ["Vadim Kaushan <admin@disasm.info>"]
 edition = "2018"
 
 [dependencies]
-cortex-m = "0.6.0"
-cortex-m-rt = "0.6.8"
-stm32f3xx-hal = { version = "0.2.3", features = ["rt", "stm32f303"] }
-panic-semihosting = "0.5.2"
-usb-device = "0.2.1"
-stm32-usbd = { version = "0.2.1", features = ["stm32f303xc"] }
+cortex-m = "0.6.1"
+cortex-m-rt = "0.6.10"
+stm32f3xx-hal = { version = "0.4.0", features = ["rt", "stm32-usbd", "stm32f303xc"] }
+panic-semihosting = "0.5.3"
+usb-device = "0.2.3"
 
 [patch.crates-io]
 stm32-usbd = { path = "../../stm32-usbd" }
