--- a/stm32f103c8/.cargo/config
+++ b/stm32f103c8/.cargo/config
@@ -1,5 +1,5 @@
 [target.thumbv7m-none-eabi]
-runner = "arm-none-eabi-gdb -q -x ../bmp.gdb"
+runner = "arm-none-eabi-gdb -q -x openocd.gdb"
 rustflags = [
   "-C", "link-arg=-Tlink.x",
 ]
